--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li>break</li>
+		<li>fine</li>
+		<li>optimization</li>
+		</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
